# coala

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  validate_commit_restrictions.py
.github/workflows/: test-and-lint.yml
src/coala/: __init__.py
src/coala/tutorial_lab/: cloud.yaml  steam.yaml
tests/: conftest.py
tests/tutorial_lab/: test_each_elems.py
